--- a/CalligraphySample/src/main/res/layout/activity_main.xml
+++ b/CalligraphySample/src/main/res/layout/activity_main.xml
@@ -1,9 +1,23 @@
-<FrameLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context="uk.co.chrisjenx.calligraphy.sample.MainActivity">
+
+    <uk.co.chrisjenx.calligraphy.sample.CalligraphyToolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:fontPath="fonts/Oswald-Stencbab.ttf"
+        />
+
+    <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="uk.co.chrisjenx.calligraphy.sample.MainActivity"
-        tools:ignore="MergeRootFrame">
-</FrameLayout>
+        >
+    </FrameLayout>
+</LinearLayout>
